# caffeinator

./: .gitignore  LICENSE  Makefile  README.md  index.html  package.json
.github/homebrew/: caffeinator.rb.template
.github/workflows/: release.yml
Caffeinator/: CaffeinatorApp.swift  Info.plist
Caffeinator.xcodeproj/: project.pbxproj
Caffeinator/Components/: AnimatedCoffeeIcon.swift
Caffeinator/Models/: CaffeinateMode.swift  DeveloperPreset.swift  Duration.swift  TimerPreset.swift  WatchedProcess.swift
Caffeinator/Utilities/: DesignSystem.swift  KeyboardShortcuts.swift  NotificationManager.swift
Caffeinator/ViewModels/: CaffeinateManager.swift  ProcessWatcher.swift  SettingsViewModel.swift
Caffeinator/Views/: MenuBarView.swift  ProcessPickerView.swift  SettingsView.swift
CaffeinatorCLI/: main.swift
docs/: INTERNALS.md
homebrew/: caffeinator.rb
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  power.rs  state.rs
src/components/: CoffeeIcon.tsx  DurationPicker.tsx  Header.tsx  ModeSelect.tsx  PowerProfileButton.tsx  Timer.tsx
src/hooks/: useCaffeinate.ts
