[package]
name = "caffeinator"
version = "0.1.0"
description = "Keep your Mac awake"
authors = ["Tasnim Zotder"]
edition = "2021"

[lib]
name = "caffeinator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
